Fix layout on mobile for conversations page.

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -15,7 +15,7 @@
   vertical-align: middle;
   margin: 0;
   padding: 0.75em;
-  max-width: 90%;
+  max-width: 83%;
   display: inline-block;
   border-radius: 1em;
   color: white;
